[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-chat-exporter"
version = "0.1.0"
description = "Export OpenCode, Copilot, and Claude Code chat sessions to Markdown"
readme = "SPECS.md"
requires-python = ">=3.9"
authors = [
    { name = "Alex Chudesnov", email = "alex@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
ai-chat-export = "ai_chat_exporter.cli:main"
